# Iron-Dillo-Agent

./: .gitignore  README.md  agent.py  agent_model.py  pyproject.toml
docs/: module-layout.md  output-schema.md  use-cases.md  workflow.md
examples/: sample-brief.md  sample-checklist.md
iron_dillo_cybersandbox_ai/: README.md  __init__.py
iron_dillo_cybersandbox_ai/backend/: __init__.py  deps.py  main.py  rag.py  security.py  settings.py  utils.py  vectors.py
iron_dillo_cybersandbox_ai/frontend/: index.html
iron_dillo_cybersandbox_ai/frontend/static/: app.js
iron_dillo_cybersandbox_ai/frontend/styles/: tailwind.css
iron_dillo_cybersandbox_ai/models/: Modelfile
iron_dillo_cybersandbox_ai/scripts/: __init__.py  demo_seed.py  ingest.py
src/iron_dillo/: __init__.py  agent_model.py  buddy_facts.py  cli.py  config.py  gui.py  llm.py  logging_utils.py  memory.py
src/iron_dillo/product/: __init__.py  artifact_renderer.py  intake_normalizer.py  scenario_selector.py  score_calculator.py  triage_engine.py  workflow.py
src/iron_dillo/product/schemas/: __init__.py  intake.py  output.py  scenarios.py
src/iron_dillo/tools/: __init__.py  compliance_guides.py  risk_assessor.py  security_awareness.py
tests/: conftest.py  test_config.py  test_cybersandbox_rag.py  test_gui.py  test_product_workflow.py  test_tools.py
tools/: compliance_guides.py  rag_store.py
